--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
 
 
+
 *{
     margin: 0;
     padding: 0;
@@ -353,7 +354,7 @@ body{
     transform: translateX(10%);
 }
 
-.bx-search{
+.fa-search{
     position: absolute;
     margin: 10px;
     z-index: 99;
@@ -364,7 +365,7 @@ body{
     
 }
 
-/* .bx-search:hover{
+/* .fa-search:hover{
     background: rgb(47, 5, 5);
     color: #140e5a;
     opacity: 1;
@@ -392,8 +393,8 @@ body{
 }
 
 #redactarMsj{
-    width: 50%;
-    height: 60%;
+    width: 57%;
+    height: 53%;
     margin-left:10px;
     /* margin-top:1 0px; */
     display: none;
@@ -402,7 +403,7 @@ body{
     right: 10px;
     border: 1px solid rgb(170, 167, 167);
     border-radius: 1.5rem;
-    margin-bottom: 5%;
+    margin-bottom: 12%;
 }
 .card-header{
     background-color: #1d1b31;
@@ -499,11 +500,127 @@ body{
 }
 
 
+ /** Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
+    #redactarMsj{
+        width: 50%;
+        height: 60%;
+        margin-left:10px;
+        /* margin-top:1 0px; */
+        display: none;
+        position: fixed; 
+        bottom: 0;  
+        right: 10px;
+        border: 1px solid rgb(170, 167, 167);
+        border-radius: 1.5rem;
+        margin-bottom: 13%;
+    }
+
+    .btn-enviar{
+        background-color: #DC4B3E;
+        margin-left: 40%;
+        border-radius: 1.5rem;
+        width: 40%;
+        color: #fff;
+        font-size: larger;
+        /* font-weight: 900; */
+    }
+ }
+
+ /** Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+    #redactarMsj{
+        width: 50%;
+        height: 60%;
+        margin-left:10px;
+        /* margin-top:1 0px; */
+        display: none;
+        position: fixed; 
+        bottom: 0;  
+        right: 10px;
+        border: 1px solid rgb(170, 167, 167);
+        border-radius: 1.5rem;
+        margin-bottom: 13%;
+    }
+
+    .btn-enviar{
+        background-color: #DC4B3E;
+        margin-left: 40%;
+        border-radius: 1.5rem;
+        width: 40%;
+        color: #fff;
+        font-size: larger;
+        /* font-weight: 900; */
+    }
+}
+
+ /** Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+    #redactarMsj{
+        width: 50%;
+        height: 60%;
+        margin-left:10px;
+        /* margin-top:1 0px; */
+        display: none;
+        position: fixed; 
+        bottom: 0;  
+        right: 10px;
+        border: 1px solid rgb(170, 167, 167);
+        border-radius: 1.5rem;
+        margin-bottom: 13%;
+    }
+
+    .btn-enviar{
+        background-color: #DC4B3E;
+        margin-left: 40%;
+        border-radius: 1.5rem;
+        width: 40%;
+        color: #fff;
+        font-size: larger;
+        /* font-weight: 900; */
+    }
+ }
+
+ /** X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+    #redactarMsj{
+        width: 56%;
+        height: 50%;
+        margin-left:10px;
+        /* margin-top:1 0px; */
+        display: none;
+        position: fixed; 
+        bottom: 0;  
+        right: 10px;
+        border: 1px solid rgb(170, 167, 167);
+        border-radius: 1.5rem;
+        margin-bottom: 13%;
+    }
+
+    .btn-enviar{
+        background-color: #DC4B3E;
+        margin-left: 80%;
+        border-radius: 1.5rem;
+        width: 20%;
+        color: #fff;
+        font-size: larger;
+        /* font-weight: 900; */
+    }
+ }
+
+ /** XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) { ... }
+
+
+
+
+
+
 @media screen and (max-width: 600px) {
     .home-content input{
         opacity: 0;
     }
-    .bx-search{
+    .fa-search{
         opacity: 0;
     }
     .fa-question-circle{
@@ -527,9 +644,9 @@ body{
     } */
 
     #redactarMsj{
-        width: 50%;
-        height: 60%;
-        margin-left:10px;
+        width: 60%;
+        height: 81%;
+        margin-right: 12%;
         /* margin-top:1 0px; */
         display: none;
         position: fixed; 
@@ -537,7 +654,7 @@ body{
         right: 10px;
         border: 1px solid rgb(170, 167, 167);
         border-radius: 1.5rem;
-        margin-bottom: 13%;
+        margin-bottom: 12%;
     }
 
     .btn-enviar{
