--- a/css/style.css
+++ b/css/style.css
@@ -609,10 +609,7 @@ body{
  }
 
  /** XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) { ... }
-
-
-
+/* @media (min-width: 1400px) { ... } */
 
 
 
@@ -666,9 +663,4 @@ body{
         font-size: larger;
         /* font-weight: 900; */
     }
-    
-
-
 }
-
-
